coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-coder
    ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  tls:
    - hosts:
      - coder.${CLUSTER_ID}.k8s.civo.com
      secretName: letsencrypt-prod-coder 
  rules:
  - host: coder.${CLUSTER_ID}.k8s.civo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port: 
              number: 80
